# python-package

./: .gitignore  README.md  setup.cfg  setup.py
.github/workflow/: main.yml
.github/workflows/: main.yml
docs/: architecture.rst  conf.py  index.rst
src/imppkg/: data.json  harmonic_mean.pyx  harmony.py  hello.py
test/: test_harmonic_mean.py
