[metadata]
name = first-python-package
version = 0.0.1
url = https://gitee.com/
author = LinkinW
author_email = "LinkinW" 1771139389@qq.com
description = This package does amazing things.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers = License :: OSI Approved :: MIT License

include_package_data = True

[options]
install_requires =
 termcolor>=1.1.0,<2
package_dir = 
 =src
packages = find:
[options.packages.find]
where = src
exclude = test*

[options.entry_points]
console_scripts =
    harmony = imppkg.harmony:main

[tox:tox]
isolated_build = True
envlist = py39,py310

[testdeps]
deps =
    pytest
    pytest-cov
    pytest-randomly

[testenv]
commands =
    pytest {posargs}
    echo haha
deps =
    {[testdeps]deps}

[testenv:docs]
commands =
    sphinx-build -n -W --keep-going -b html docs/ docs/_build/

deps =
    sphinx

[testenv:devdocs]
commands =
    sphinx-apidoc \
    --force \
    --implicit-namespaces \
    --module-first \
    --separate \
    -o docs/reference/ \
    src/imppkg/ \
    src/imppkg/*.c \
    src/imppkg/*.so
    sphinx-autobuild -n -W --host 0.0.0.0 --port 9876 -b html docs/ docs/_build/
deps =
    sphinx
    sphinx-autobuild

[testenv:typecheck]
commands =
    mypy --ignore-missing-imports {posargs:src test}
deps =
    {[testdeps]deps}
    mypy
    types-termcolor

[testenv:get_my_ip]
deps =
    requests

commands =
    python -c 'import requests;requests.get("https://canhazip.com").text'

[tool:pytest]
testpaths = test
addopts = --cov
[coverage:run]
branch = True
source = imppkg
[coverage:report]
show_missing = True
skip_covered = True
[coverage:paths]
source =
 src/imppkg/
 .venv/lib/python3.10/site-packages/imppkg/
